MFC r272762: Correct scale factor for T terabyte suffix

PR:		194250

Former-commit-id: 4d82d374128213c0e2e8da98603a77041c20bb22